--- a/css/style.css
+++ b/css/style.css
@@ -90,3 +90,80 @@ ol li {
 * {
    box-sizing: border-box; 
 }
+body {
+	font-family: 'Roboto', sans-serif;
+	font-size: 18px;
+	color: #919191;
+}
+#hero {
+	background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../img/hero-bg.jpg");
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
+}
+.container {
+	max-width: 1100px;
+	margin: 0 auto;
+}
+.title {
+	text-align: center;
+	padding: 250px 0;
+}
+h4 {
+	display:inline-block; 
+	padding: 20px 0;
+	font-size: 3.3rem;
+	font-weight: 500;
+	color: #ffffff;
+	text-transform: uppercase;
+	border-top: 2px solid #ffffff;
+	border-bottom: 2px solid #ffffff;
+	letter-spacing: 1px;
+}
+.cta-button {
+	display: block;
+	width: 200px;
+	font-weight: 500;
+	letter-spacing: 1px;
+	padding: 15px 25px;
+	text-decoration: none;
+	color: #ffffff;
+	text-transform: uppercase;
+	margin: 0 auto;
+	margin-top: 50px;
+	border: 1px solid #ffffff;	
+	transition: .3s;
+}
+.cta-button:hover {	
+	border: 1px solid #2ecc71;
+	color: #2ecc71;
+	transition: .3s
+}
+#navigation {
+	background-color: #252e30;
+}
+.logo {
+	width: 50px;
+	margin: 10px 0;
+}
+.nav li {
+	display: inline-block;
+	line-height: 70px;
+	letter-spacing: 0.5px;
+}
+.navbar {
+	float: right;
+
+}
+.nav li a {
+	text-decoration: none;
+	text-transform: uppercase;
+	color: #ffffff;
+	font-weight: 500;
+	margin-left: 40px;
+	transition: .3s;
+}
+.nav li a:hover {
+	color: #2ecc71;
+	transition: .3s;
+}
