--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ i {
 p,
 ul li,
 ol li {
-    font-size: 17px;
+    font-size: 18px;
     line-height: 24px;
 }
 /*HELPER CLASSES END*/
@@ -252,6 +252,7 @@ progress::-moz-progress-bar {
 #portfolio {
 	overflow: hidden;
 	background-color: #f2f2f1;
+	padding-bottom: 100px;
 }
 #portfolio .container {
 	text-align: center;
@@ -303,4 +304,26 @@ progress::-moz-progress-bar {
 }
 .img-6:hover {
 	background-image: linear-gradient(rgba(89, 208, 139, 0.75), rgba(89, 208, 139, 0.75)), url("../img/proj6.jpg");
+}
+#contact {
+	background-color: #252e30;
+}
+.contact-head {
+	color: #ffffff;
+	margin-bottom: 50px;
+}
+#contact .container {
+	padding-bottom: 100px;
+	padding-top: 100px; 
+	text-align: center;
+}
+.contact-para {
+	letter-spacing: 1px;
+}
+footer {
+	background-color: #191f21;
+	color: #4b5456;
+	padding: 50px;
+	text-align: center;
+	text-transform: uppercase;
 }
